fix slider not showing on mobile

--- a/src/scss/components/_globals.scss
+++ b/src/scss/components/_globals.scss
@@ -43,6 +43,7 @@ body {
 
 .content-right {
     flex: 0 1 100%;
+    height: 100%;
     background-color: #efefef;
     @media screen and (min-width: 768px) {
         max-width: calc(100% - 400px);
